--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ img {
   border-radius: 20px;
   padding: 16px 16px 40px 16px;
   width: 288px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .text-section {
